...
    android:layout_width="match_parent"
    android:background="@drawable/metal"
    android:layout_height="match_parent"
    tools:context=".ControladorMenuPrincipal">

    <TextView
        android:id="@+id/textView_vMenuTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="84dp"
...
